environments/dev/curlpod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
  namespace: dev
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
