environments/dev/curlpod1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: curlpod1-dev
  namespace: dev
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      resources:
        requests:
          cpu: 100m
          memory: 256Mi
        limits:
          cpu: 200m
          memory: 256Mi
