environments/dev/deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app4
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-service
  template:
    metadata:
      labels:
        app: myapp-service
    spec: 
      containers:
        - name: app3
          image: nginx:latest
          ports:
            - containerPort: 8080
