environments/dev/nginx-lb.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-lb
  namespace: dev
spec: 
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
