environments/dev/service-dev.yml
---
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
  namespace: dev
spec:
  selector:
    app: busybox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
